2007-02-20  Jose Dapena Paz  <jdapena@igalia.com>

	More reliable startup of apt-worker:

	* apt-worker-client.cc: added functions cancel_apt_worker_start
	and try_apt_worker_start to make apt-worker initialisation
	asynchronous. This prevents locks of app manager on startup.
	Now it waits 3 seconds trying to start the apt-worker before
	giving up. Then it returns to the GUI, letting user read the
	log (all the other functions don't work).

	* main.cc (main): added start_apt_worker_reply callback and added
	asynchronous support for apt-worker initialization, as offered in
	apt-worker-client.

2007-02-20  Marius Vollmer  <marius.vollmer@nokia.com>

	* Makefile.am (install-data-local): Create empty catalogues file
	when it doesn't exist.

2007-02-19  Jose Dapena Paz  <jdapena@igalia.com>

	* src/apt-worker.cc (cmd_save_applications_install_file): leak
	fixes (string arrays of package names and deb lines were not
	freed).

	* src/util.cc (really_cancel_response): do gtk_main_quit instead
	of exit(1) to do a cleaner close of the application.

2007-02-18  Marius Vollmer  <mvo@zagadka.de>

	* src/apt-worker.cc (append_system_sources,
	append_system_source_dir): New.
	(cmd_get_catalogue): Include the system sources in the reply as
	"source" xexps.
	(cmd_set_catalogues): Ignore "source" xexps in the argument.

	* src/repo.h, src/repo.cc (with_catalogues, get_catalogues):
	Renamed former to latter.
	(set_catalogues): Added continuation, updated all callers.
	(add_catalogues): New.
	(make_catcache_from_xexp): Handle "source" xexps.

	* src/instr.cc (open_local_install_instructions): Experimentally
	call add_catalogues when the instructions file can be read as an
	xexp.
	
	* src/xexp.h, src/xexp.c (xexp_copy, xexp_aref_int,
	xexp_adel_all): New.

	* src/apt-worker.cc (cmd_set_catalogues): Ignore non-"catalogue"
	entries when writing the sources for apt.
	* src/repo.cc (set_cat_list): Likewise when filling the list widget.

	Support for X-Expressions and initial rich catalogue